@@ -108,6 +108,13 @@ ru:
         few:   "больше {{count}} лет"
         many:  "больше {{count}} лет"
         other: "больше {{count}} лет"
+    prompts:
+      year:   "Год"
+      month:  "Месяц"
+      day:    "День"
+      hour:   "Часов"
+      minute: "Минут"
+      second: "Секунд"
 
   # Используется в хелпере error_messages_for
   activerecord:
